--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,12 +30,12 @@ dependencies:
   url_launcher:
   flutter:
     sdk: flutter
+  speech_to_text: ^5.0.0
+  avatar_glow: ^2.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  chewie: ^1.2.2
 
 dev_dependencies:
   flutter_test:
