--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 1.0.7+7
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -24,14 +24,14 @@ dependencies:
   http:
   html:
   rxdart:
-  marquee: ^2.2.0
-  device_apps:
-  android_intent:
+  marquee:
   url_launcher:
   flutter:
     sdk: flutter
-  speech_to_text: ^5.0.0
-  avatar_glow: ^2.0.1
+  speech_to_text:
+  avatar_glow:
+  download_assets:
+  open_file:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
