--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.7+7
+version: 1.0.8+8
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -28,10 +28,13 @@ dependencies:
   url_launcher:
   flutter:
     sdk: flutter
-  speech_to_text:
+  speech_to_text: 5.0.0
   avatar_glow:
   download_assets:
   open_file:
+  path_provider: ^2.0.3
+  chewie: ^1.2.2
+  better_player: ^0.0.73
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
