--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.8+8
+version: 1.0.10+10
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -35,6 +35,7 @@ dependencies:
   path_provider: ^2.0.3
   chewie: ^1.2.2
   better_player: ^0.0.73
+  video_player: ^2.2.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
