--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   better_player: ^0.0.73
   video_player: ^2.2.3
   pausable_timer: ^1.0.0+2
+  wakelock: ^0.5.6
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
