--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.16+16
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.14.0 <3.0.0"
 
 dependencies:
   http:
@@ -28,16 +28,16 @@ dependencies:
   url_launcher:
   flutter:
     sdk: flutter
-  speech_to_text: 5.0.0
+  speech_to_text:
   avatar_glow:
   download_assets:
   open_file:
-  path_provider: ^2.0.3
-  chewie: ^1.2.2
-  better_player: ^0.0.73
-  video_player: ^2.2.3
-  pausable_timer: ^1.0.0+2
-  wakelock: ^0.5.6
+  path_provider:
+  chewie:
+  better_player:
+  video_player:
+  pausable_timer:
+  wakelock:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
